// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ServiceSelect Disabled State when No Profile Selected 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-gray-50 py-1.5 pl-1 pr-10 text-left text-gray-400 font-light shadow-sm ring-1 ring-inset ring-gray-200 focus:outline-none sm:text-sm sm:leading-6"
          data-testid="listbox-button"
          disabled=""
        >
          <span
            class="flex items-center"
          >
            <span
              class="pointer-events-none flex-shrink-0 pl-3"
            >
              <svg
                aria-hidden="true"
                class="h-5 w-5 text-gray-300"
                data-testid="exclamation-triangle-icon"
              />
            </span>
            <span
              class="ml-3 block truncate"
            >
              No profile selected
            </span>
            <span
              class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
            >
              <svg
                aria-hidden="true"
                class="h-5 w-5 text-gray-300"
                data-testid="chevron-up-down-icon"
              />
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Error State 1`] = `
<body>
  <div>
    <div
      class="rounded-md bg-red-50 border-red-100 ring-1 ring-red-300 p-4 mt-2 mb-4"
    >
      <div
        class="flex"
      >
        <div
          class="flex-shrink-0"
        >
          <svg
            aria-hidden="true"
            class="size-5 text-red-500"
            data-testid="exclamation-circle-icon"
          />
        </div>
        <div
          class="ml-3"
        >
          <h3
            class="text-sm font-medium text-red-800"
          >
            Failed to fetch services
          </h3>
          <div
            class="mt-2 font-light text-sm text-red-800"
          >
            <p>
              We ran into an issue while fetching the services available for this profile.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Failed service selected 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
      data-value="service-failed"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-white py-1.5 pl-3 pr-10 text-left text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:text-sm sm:leading-6"
          data-testid="listbox-button"
        >
          <span
            class="flex items-center"
          >
            <span
              aria-label="Offline"
              class="bg-red-500 inline-block h-2 w-2 flex-shrink-0 rounded-full"
            />
            <span
              class="ml-3 block truncate"
            >
              Failed Service
            </span>
          </span>
          <span
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-400"
              data-testid="chevron-up-down-icon"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Healthy service selected 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
      data-value="service-healthy"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-white py-1.5 pl-3 pr-10 text-left text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:text-sm sm:leading-6"
          data-testid="listbox-button"
        >
          <span
            class="flex items-center"
          >
            <span
              aria-label="Online"
              class="bg-green-500 inline-block h-2 w-2 flex-shrink-0 rounded-full"
            />
            <span
              class="ml-3 block truncate"
            >
              Healthy Service
            </span>
          </span>
          <span
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-400"
              data-testid="chevron-up-down-icon"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Loading State 1`] = `
<body>
  <div>
    <div
      class="animate-pulse rounded-md bg-gray-100 p-4 mt-2 mb-4 h-72"
    />
  </div>
</body>
`;

exports[`ServiceSelect No Services Available State 1`] = `
<body>
  <div>
    <div
      data-testid="field"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="rounded-md bg-yellow-50 border-yellow-100 ring-1 ring-yellow-300 p-4 mt-2 mb-4"
      >
        <div
          class="flex"
        >
          <div
            class="flex-shrink-0"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-yellow-400"
              data-testid="exclamation-triangle-icon"
            />
          </div>
          <div
            class="ml-3"
          >
            <h3
              class="text-sm font-medium text-yellow-800"
            >
              No services available
            </h3>
            <div
              class="mt-2 font-light text-sm text-yellow-800"
            >
              <p>
                Click on the button below to create a new service under the selected profile.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Pending service selected 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
      data-value="service-pending"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-white py-1.5 pl-3 pr-10 text-left text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:text-sm sm:leading-6"
          data-testid="listbox-button"
        >
          <span
            class="flex items-center"
          >
            <span
              aria-label="Offline"
              class="animate-pulse bg-green-500 inline-block h-2 w-2 flex-shrink-0 rounded-full"
            />
            <span
              class="ml-3 block truncate"
            >
              Pending Service
            </span>
          </span>
          <span
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-400"
              data-testid="chevron-up-down-icon"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Service Selection without Selected Service but with Profile 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-white py-1.5 pl-3 pr-10 text-left text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:text-sm sm:leading-6"
          data-testid="listbox-button"
        >
          <span
            class="flex items-center"
          >
            <span
              class="ml-3 block truncate"
            >
              No service selected
            </span>
          </span>
          <span
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-400"
              data-testid="chevron-up-down-icon"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Starting service selected 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
      data-value="service-starting"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-white py-1.5 pl-3 pr-10 text-left text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:text-sm sm:leading-6"
          data-testid="listbox-button"
        >
          <span
            class="flex items-center"
          >
            <span
              aria-label="Offline"
              class="animate-pulse bg-green-500 inline-block h-2 w-2 flex-shrink-0 rounded-full"
            />
            <span
              class="ml-3 block truncate"
            >
              Starting Service
            </span>
          </span>
          <span
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-400"
              data-testid="chevron-up-down-icon"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Submitted service selected 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
      data-value="service-submitted"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-white py-1.5 pl-3 pr-10 text-left text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:text-sm sm:leading-6"
          data-testid="listbox-button"
        >
          <span
            class="flex items-center"
          >
            <span
              aria-label="Offline"
              class="bg-yellow-500 inline-block h-2 w-2 flex-shrink-0 rounded-full"
            />
            <span
              class="ml-3 block truncate"
            >
              Submitted Service
            </span>
          </span>
          <span
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-400"
              data-testid="chevron-up-down-icon"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`ServiceSelect Timed-out service selected 1`] = `
<body>
  <div>
    <div
      data-testid="listbox"
      data-value="service-timeout"
    >
      <label
        class="pt-2 block text-sm font-medium leading-6 text-gray-900"
      >
        Services
      </label>
      <div
        class="relative mt-2"
      >
        <button
          class="relative w-full cursor-default rounded-md bg-white py-1.5 pl-3 pr-10 text-left text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500 sm:text-sm sm:leading-6"
          data-testid="listbox-button"
        >
          <span
            class="flex items-center"
          >
            <span
              aria-label="Offline"
              class="bg-red-500 inline-block h-2 w-2 flex-shrink-0 rounded-full"
            />
            <span
              class="ml-3 block truncate"
            >
              Timed out Service
            </span>
          </span>
          <span
            class="pointer-events-none absolute inset-y-0 right-0 flex items-center pr-2"
          >
            <svg
              aria-hidden="true"
              class="h-5 w-5 text-gray-400"
              data-testid="chevron-up-down-icon"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;
